# video

./: CMakeLists.txt  Makefile  OpenCVNotes.md  README.md  report  report1  report2  report3  report5  video.cpp  videostab.cpp
data/: report1  report2  report3
ex/: wiki
ex/mine/: Makefile  min.cpp  pmin.cpp  pmin1.cpp  pmin2.cpp
ex/others/: Makefile  ex.cpp  ff_qs_opt.cpp  ff_qs_opt_original.cpp  ffsobel.cpp
parallel/: Makefile  main.cpp  pcarving.cpp  pcarving.h  psobel.cpp  psobel.h  video.cpp  video.h
plots/: duomo.py  duomo_energy_efficiency_plot.py  duomo_energy_plot.py  duomo_energy_speedup_plot.py  duomo_home.py  duomo_home_energy_plot.py  macron.py  report  report1  report3  report4  ritratto.py  ritratto_energy_efficiency_plot.py  ritratto_energy_plot.py  ritratto_energy_speedup_plot.py  scuola.py  scuola_energy_efficiency_plot.py  scuola_energy_plot.py  scuola_energy_speedup_plot.py  seam.py
report/: ProjectReportFinal.odt
sequential/: Makefile  carving.cpp  carving.h  main.cpp  svideo.cpp  svideo.h
src/: carving.cpp  carving.h  carving.hpp  fancy.cpp  graph.cpp  graph.h  main.cpp  pcarving.cpp  pcarving.h  pmin.cpp  pmin1.cpp  psobel.cpp  psobel.h  video.cpp  video.h  video.hpp
tests/: Makefile  main.cpp
